--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,6 @@ language: java
 jdk: oraclejdk8
 
 script:
-- ./mvnw clean install -B
+  - ./mvnw clean install -B
+before_install:
+  - chmod +x mvnw
