--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,8 @@ script:
   - ./mvnw clean install -B
 before_install:
   - chmod +x mvnw
+deploy:
+  provider: heroku
+  api-key:
+   secure: $HEROKU_API_KEY
+   APP: vending-machine-api
