--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,9 @@ before_install:
   - chmod +x mvnw
 deploy:
   provider: heroku
+  skip_cleanup: true
   api-key:
    secure: $HEROKU_API_KEY
+  app:
   on:
    branch: vending-machine-api
